--- a/BlockedFrontend/templates/admin/admin.html
+++ b/BlockedFrontend/templates/admin/admin.html
@@ -1,4 +1,4 @@
-{% extends "BasicPage.page.html" %}
+{% extends "admin.page.html" %}
 {% import "forms.part.html" as forms %}
 
 {% set pagetitle = "Administrator Login" %}
@@ -19,7 +19,6 @@ You can now:
 </p>
 
 <div>
-<a href="{{url_for('.logout')}}" class="btn btn-lg btn-primary">Log out</a>
 </div>
 
 </div>
