--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -82,7 +82,7 @@
 </tr>
 {% for item in results %}
 <tr id="net_{{item.network_name|replace(' ','')}}" class="{{ 'error' if show_status and item.status in ('error','dnserror','sslerror') else ''}}">
-  <td>{{item.network_name}}</td>
+  <td title="{{ networks.get(item.network_name, '') }}">{{item.network_name}}</td>
   <td>{{item.status_timestamp|fmtime}}</td>
   {% if show_category %}
     <td>{{item.category}}</td>
