change page title; closes openrightsgroup/blocked-org-uk/issues#183

--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -5,7 +5,7 @@
 {% endmacro %}
 
 {% if not thanks %}
-{%set pagetitle = domain %}
+{%set pagetitle = "Site report: " + domain %}
 {%set pagerole = "Site blocking report" %}
 {% else %}
 {%set pagetitle = "Thank you!" %}
