--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -17,7 +17,7 @@ banner_text_block(bool): show banner text block, default true
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>{{ pagetitle }}</title>
+    <title>{{ titletag if titletag is defined else pagetitle }}</title>
 
     <!-- Bootstrap -->
 
