remove new tab from try again link

--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -159,7 +159,7 @@ Site has been flagged
 
 <a href="{{url}}" target="_blank" class="btn btn-primary">Visit site</a>
 {% if session.route is defined %}
-<a href="{{url_for('unblock.browse_next') }}" target="_blank" class="btn btn-primary">Try another site</a>
+<a href="{{url_for('unblock.browse_next') }}" class="btn btn-primary">Try another site</a>
 {% endif %}
 </div>
 
