additional text under site count; closes openrightsgroup/blocked-org-uk#199

--- a/BlockedFrontend/templates/show_list.html
+++ b/BlockedFrontend/templates/show_list.html
@@ -38,6 +38,13 @@
 </div>
 
 <div class="row sitelistrow">
+  <div class="col-md-12">
+Use the <strong>request unblock</strong> tool to start reporting the mistakes listed here.
+  </div>
+</div>
+
+
+<div class="row sitelistrow">
     <div class="col-md-12">
 
 <table class="table savedlist">
