--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -105,7 +105,7 @@ Your feedback was successfully submitted.
 {%block body %}
 {% if thanks %}
 <h2>Unblock another site</h2>
-<h3>{{ domain }}</h3>
+<h3><a href="{{url}}" target="_blank" rel="nofollow">{{ domain }}</a></h3>
 {% endif %}
 {% if live %}
 <h3>Active blocks</h3>
