--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -14,7 +14,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 
 {% block body %}
 <!-- template BasicPage -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.css" />
+<link rel="stylesheet" href="/static/select2/select2.css" />
 <div class="row">
 <div class="col-md-4">
 
@@ -100,6 +100,6 @@ A great many websites are being blocked mistakenly as a result of government imp
 {% endblock %}
 
 {% block page_js_libs %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.js"></script>
+<script src="/static/select2/select2.js"></script>
 
 {% endblock %}
