move chartjs to local directory; openrightsgroup/blocked-org-uk#196

--- a/BlockedFrontend/templates/stats/stats.html
+++ b/BlockedFrontend/templates/stats/stats.html
@@ -48,7 +48,7 @@
 {% endblock %}
 
 {% block page_js_libs %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
+<script src="/static/chartjs/Chart.min.js"></script>
 {% endblock %}
 
 
