--- a/BlockedFrontend/templates/cms/network_description.part.html
+++ b/BlockedFrontend/templates/cms/network_description.part.html
@@ -2,3 +2,7 @@
 {% macro isp_info(name, networks) %}
 <a role="popover" tabindex="0" data-trigger="focus" data-toggle="popover" title="{{name}}" data-content="{{ networks.get(name, '') }}">{{name}}<span style="padding-left: 0.5em" class="glyphicon glyphicon-info-sign"></span></a>
 {% endmacro %}
+
+{% macro popover_js() %}
+  $('[data-toggle="popover"]').popover({'html':true});
+{% endmacro %}
