--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -35,6 +35,15 @@ banner_text_block(bool): show banner text block, default true
   <body>
     {{ chunks.piwik() }}
     <!-- ADMIN MODE: {{ g.admin }} -->
+    <div class="topstrip">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+          Transparency campaign from <a href="https://www.openrightsgroup.org"><img src="/static/img/org_horiz.png" title="Open Rigts Group Logo" /></a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container">
 
     <div class="row menurow">
