--- a/BlockedFrontend/templates/site-search.html
+++ b/BlockedFrontend/templates/site-search.html
@@ -43,6 +43,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div><a href="{{ url_for('.check', mode='live') }}">Check a specific website</a></div>
 <div><a href="{{ url_for('category.blocked_sites') }}">Search sites by category</a></div>
 <div><a href="{{ url_for('.random_category') }}">Browse a random category</a></div>
+<div><a href="{{ url_for('category.show_lists') }}">Browse site lists</a></div>
 
 </div>
 </div> <!-- /.row -->
