--- a/BlockedFrontend/templates/cms/legal-blocks.html
+++ b/BlockedFrontend/templates/cms/legal-blocks.html
@@ -21,8 +21,16 @@
 <div class="row">
 <div class="col-md-12">
 
-<h2>Recent legally-blocked sites</h2>
-<h4>{{urlcount}} site{{'s' if urlcount != 1 else '' }} detected</h4>
+<div class="row">
+<div class="col-md-9">
+    <h2>Recent legally-blocked sites</h2>
+    <h4>{{urlcount}} site{{'s' if urlcount != 1 else '' }} detected</h4>
+</div>
+<div class="col-md-3">
+    <a style="margin-top: 20px" href="{{ url_for('.export_blocks') }}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-save"></span> Export</a>
+</div>
+</div>
+
 <table class="table table-striped">
     <tr>
         <th>URL</th>
