maintain domain blacklist; openrightsgroup/blocked-org-uk#134

--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -26,6 +26,7 @@
         <ul class="nav navbar-nav">
           <li class=""><a href="/control">Home</a></li>
           <li class=""><a href="{{ url_for('.savedlists') }}">Saved Lists</a></li>
+          <li class=""><a href="{{ url_for('.blacklist_select') }}">Domain Blacklist</a></li>
           <li class=""><a href="{{url_for('.logout')}}" class="">Log out</a></li>
           <!-- 
           <li class="dropdown">
