add updated copy to the unblock pages; openrightsgroup/blocked-org-uk#223

--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -268,3 +268,11 @@ th.num {
 .topstrip .row a {
     margin-left: 0.25em;
 }
+
+.sendisps {
+    margin-top: 0.5em;
+}
+
+.sendisps span {
+    font-weight: bold;
+}
