--- a/BlockedFrontend/templates/unblock.html
+++ b/BlockedFrontend/templates/unblock.html
@@ -1,7 +1,7 @@
 {% extends "BasicPage.page.html" %}
 
 {%set pagetitle = domain %}
-{%set pagerole = "Request a site be unblocked" %}
+{%set pagerole = "Request ISPs remove this site from filters" %}
 
 {%block banner_text%}
 {%endblock%}
