--- a/BlockedFrontend/templates/unblock2.html
+++ b/BlockedFrontend/templates/unblock2.html
@@ -2,7 +2,7 @@
 {% from "network_description.part.html" import isp_info, popover_js %}
 
 {%set pagetitle = domain %}
-{%set pagerole = "Request a site be unblocked" %}
+{%set pagerole = "Request ISPs remove this site from filters" %}
 
 {%block banner_text%}
 {%endblock%}
@@ -48,13 +48,13 @@
 <a class="btn btn-default" id="recheck">Re-check site</a>
 </div>
 
-
 <h2>About the site</h2>
 <div class="form-group">
   <label for="message">Please explain why this site should be unblocked</label>
   <div class="control-group">
     <textarea  rows="6" type="text" name="message" id="message" class="form-control"></textarea>
   </div>
+  <p class="sendisps">Your email will be sent to {{ block_names | join_en(True) | safe}}.</p>
 </div>
 
 <div class="form-group">
