--- a/BlockedFrontend/templates/unblock.html
+++ b/BlockedFrontend/templates/unblock.html
@@ -11,6 +11,7 @@
 <div class="row">
 <div class="col-md-7">
 
+<p>Use this form to send ISPs an email, asking them to remove this site from their filter block list.</p>
 <form action="/unblock2?url={{url}}" method="POST" class="form">
 <input type="hidden" name="url" value="{{url}}" />
 <h2>Your details</h2>
