change site report link; openrightsgroup/blocked-org-uk#241

--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -134,9 +134,13 @@ font-size: 125%;
     text-transform: uppercase;
 }
 
-.sitereport {
+td.sitereport {
     width: 15%;
     }
+
+div.sitereport {
+    margin-top: 0.25em;
+}
 
 #results * tr:hover td.reveal a {
     display: inline-block;
