--- a/BlockedFrontend/templates/cms/legal-blocks.html
+++ b/BlockedFrontend/templates/cms/legal-blocks.html
@@ -48,7 +48,9 @@
     </tr>
     {% for row in blocks %}
     <tr>
-        <td><a href="{{ url_for('category.site', url=row.url) }}">{{ row.url }}</a></td>
+        <td>{{ row.url }}
+        <div class="sitereport"><a href="{{ url_for('category.site', url=row.url) }}">Site report</a></div>
+        </td>
         <td class="networklist">
             <ul>
             {% for net in row.networks|sort %}
