--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -114,7 +114,11 @@ Your feedback was successfully submitted.
 {% if thanks %}
 <h2>Unblock another site</h2>
 <h3><a href="{{url}}" target="_blank" rel="nofollow">{{ domain }}</a></h3>
+{% if savedlist %}
+<div>This site was selected from the <a href="{{ url_for('list.show_list', name=savedlist.name) }}">{{ savedlist.name }}</a> curated list.</div>
 {% endif %}
+{% endif %}
+
 {% if live %}
 <h3>Active blocks</h3>
 {% else %}
