--- a/BlockedFrontend/templates/savedlists/show_list.html
+++ b/BlockedFrontend/templates/savedlists/show_list.html
@@ -66,7 +66,7 @@ Use the <strong>request unblock</strong> tool to start reporting the mistakes li
           {% endif %}
         </td>
         <td class="sitereport">
-          <a href="{{url_for('category.site', url=item.url)}}">View site report</a>
+          <a href="{{url_for('site.site', url=item.url)}}">View site report</a>
         </td>
         <td>
 
