--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -30,7 +30,7 @@ Your feedback was successfully submitted.
 
 {%block page_menu%}
 {% if not thanks %}
-  <div><a href="{{ url_for('.blocked_sites') }}">Browse more blocked sites</a></div>
+  <div><a href="{{ url_for('category.blocked_sites') }}">Browse more blocked sites</a></div>
   <div><a href="{{ url_for('.check',mode='live')}}">Check if a site is being blocked</a></div>
 {% endif %}
 {% endblock %}
